# task-composer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  sample_analysis_test.json  sample_dag.json  sample_embedded_reference.json  sample_error_test.json  sample_if_else.json  sample_loop.json  sample_mcp_dag.json  sample_mcp_with_hungup_timeout.json  sample_mcp_with_role.json  sample_nested_subgraph.json  sample_subgraph.json
.claude/: settings.json  settings.json.bk
mcp_servers/claude_code_mcp/: main.py  pyproject.toml
plan/requirments/: dag_flow.md  embedded_refrence_format.md
samples/: README.md  huge_dag.json  sample_analysis_test.json  sample_bash.json  sample_data.json  sample_git.json  sample_github.json  sample_if_else.json  sample_issue_bugfix.json  sample_issue_feature.json  sample_issue_microservices.json  sample_issue_workflow.json  sample_loop.json  sample_map_filter_reduce.json  sample_map_filter_reduce.json.checkpoint.json  sample_minimal.json  sample_nested_subgraph.json  test_bash_worktree.json  test_subgraph_loop.json
samples/_internal/: README.md  large_dag.json
samples/basics/: README.md  auto_dependency.json  simple_dag.json  simple_dag.json.checkpoint.json
samples/executors/: README.md
samples/features/: README.md
samples/workflows/: README.md  issue_bugfix.json  issue_feature.json  issue_tdd.json  issue_tdd.json.checkpoint.json  issue_tdd_stub.json  (+3 more)
src/: dag.rs  main.rs  path_resolver.rs  types.rs
task-composer-cli/: Cargo.toml
task-composer-cli/src/: main.rs  signal.rs
task-composer-core/: Cargo.toml
task-composer-core/src/: lib.rs  path_resolver.rs  types.rs
task-composer-core/src/analysis/: dag_analysis.rs  mod.rs  task_validation.rs
task-composer-core/src/analysis/conflict/: mod.rs  tests.rs
task-composer-core/src/checkpoint/: mod.rs  writer.rs
task-composer-core/src/dag/: mod.rs  tests.rs
task-composer-core/src/task_executor/: bash_executor.rs  dag_executor.rs  data_executor.rs  filter_executor.rs  git_executor.rs  github_executor.rs  log_executor.rs  map_executor.rs  mcp_executor.rs  mod.rs  reduce_executor.rs
task-composer-ui/: Cargo.toml  index.html
task-composer-ui/src/: main.rs  tui_main.rs
task-composer-ui/src/components/: analysis_panel.rs  mod.rs  toolbar.rs
task-composer-ui/src/components/graph/: canvas.rs  edge.rs  mod.rs  node.rs
task-composer-ui/src/components/sidebar/: mod.rs  node_palette.rs  task_detail.rs  task_list.rs
task-composer-ui/src/hooks/: mod.rs  use_analysis.rs  use_file.rs
task-composer-ui/src/state/: analysis_state.rs  dag_state.rs  mod.rs  ui_state.rs
(+20 files in other folders)
