[package]
name = "task-composer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
async-trait = "0.1"
rand = "0.8"
rmcp = { version = "0.8.0", features = [
    "client",
    "transport-child-process",
]}
anyhow = "1.0"
tracing = "0.1"
