[package]
name = "task-composer-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task-composer"
path = "src/main.rs"

[dependencies]
task-composer-core = { path = "../task-composer-core" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4.4", features = ["derive"] }
