[package]
name = "task-composer-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "task_composer_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
async-trait = "0.1"
rand = "0.8"
rmcp = { version = "0.8.0", features = [
    "client",
    "transport-child-process",
]}
anyhow = "1.0"
tracing = "0.1"
regex = "1"
octocrab = "0.49"
git2 = { version = "0.20", features = ["https", "ssh"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
