[package]
name = "task-composer-ui"
version = "0.1.0"
edition = "2021"
default-run = "task-composer-ui"

[dependencies]
task-composer-core = { path = "../task-composer-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dioxus core
dioxus = "0.6"

# Desktop (native file dialogs)
rfd = { version = "0.15", optional = true }

# Web
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "Storage", "Blob", "Url", "HtmlAnchorElement"], optional = true }
js-sys = { version = "0.3", optional = true }

# TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "rfd"]
web = ["dioxus/web", "wasm-bindgen", "web-sys", "js-sys"]
tui = ["ratatui", "crossterm"]

[[bin]]
name = "task-composer-ui"
path = "src/main.rs"

[[bin]]
name = "task-composer-tui"
path = "src/tui_main.rs"
required-features = ["tui"]
